# sweet-potato

./: .dbt_profiles_example.yml  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  check_database.sh  dbt.Dockerfile  docker-compose.yml  hello.py  init-db.sh  pyproject.toml  query_blocks.sh  query_receipts.sh  query_transactions.sh  requirements.txt
db/sql_queries/: check_data.sh
dbt_clickhouse/: dbt_project.yml
dbt_clickhouse/macros/: file_format.sql
dbt_clickhouse/models/: raw_blocks.sql  raw_receipts.sql  raw_transactions.sql  schema.yml
dbt_linea/: dbt_project.yml
indexer/: Cargo.toml
indexer/src/: main.rs
linea/: docker-compose.yml
sql/: cleanup.sql  create_blocks_table.sql  create_database.sql  create_receipts_table.sql  create_transactions_table.sql  load_blocks.sql  load_receipts.sql  load_transactions.sql
